[package]
name = "ethernaut"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[profile.nightly]
inherits = "dev"
opt-level = 0
debug = true
split-debuginfo = "off"



[dependencies]
gtk = "0.18.1"
pcap = { path = "../pcap" }
#pcap = "2.2.0"
