cargo-features = ["profile-rustflags"]

[package]
name = "ethernaught"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
rustflags = ["--cfg", "profile=\"debug\""]

[profile.release]
opt-level = 3
debug = false
rustflags = ["--cfg", "profile=\"release\""]

[profile.nightly]
inherits = "dev"
opt-level = 0
debug = true
split-debuginfo = "off"
rustflags = ["--cfg", "profile=\"nightly\""]

[dependencies]
gtk = "0.18.1"
rlibpcap = { path = "../rlibpcap" }
#pcap = "2.2.0"
