cargo-features = ["profile-rustflags"]

[package]
name = "ethernaught"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
rustflags = ["--cfg", "profile=\"debug\""]

[profile.release]
opt-level = 3
debug = false
rustflags = ["--cfg", "profile=\"release\""]

[profile.nightly]
inherits = "dev"
opt-level = 0
debug = true
split-debuginfo = "off"
rustflags = ["--cfg", "profile=\"nightly\""]

[features]
default = ["gtk4"]
gtk3 = ["gtk"]

[dependencies]
gtk = { version = "0.18.1", optional = true }
gtk4 = { version = "0.9.6", optional = true }
rlibpcap = { path = "../rlibpcap" }
